--- a/NBATeams.UI/NBATeams.UI.csproj
+++ b/NBATeams.UI/NBATeams.UI.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
@@ -17,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\NBATeams.Data\NBATeams.Data.csproj" />
     <ProjectReference Include="..\NBATeams.Domain\NBATeams.Domain.csproj" />
   </ItemGroup>
 
