creating user controller

--- a/NBATeams.Domain/NBATeams.Domain.csproj
+++ b/NBATeams.Domain/NBATeams.Domain.csproj
@@ -13,6 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.7" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\NBATeams.Data\NBATeams.Data.csproj" />
   </ItemGroup>
 
