--- a/NBATeams.Data/NBATeams.Data.csproj
+++ b/NBATeams.Data/NBATeams.Data.csproj
@@ -13,4 +13,9 @@
     <Folder Include="Repositories\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="EntityFramework" Version="6.4.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.7" />
+  </ItemGroup>
+
 </Project>
