--- a/NBATeams.Domain/NBATeams.Domain.csproj
+++ b/NBATeams.Domain/NBATeams.Domain.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="11.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.7" />
     <PackageReference Include="Moq" Version="4.18.1" />
   </ItemGroup>
 
